--- a/Web/src/main/resources/static/css/All.css
+++ b/Web/src/main/resources/static/css/All.css
@@ -1,10 +1,26 @@
 @charset "UTF-8";
 
-td, th {
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	border-bottom: none;
+#memberTable {
+	width: 100%;
+	display: block;
+}
+#data_tbody {
+	height: 300px;
+	display: block;
+	overflow-y: scroll;
+}
+
+th, tr, td{
+	width: 100px;
+	text-align: center;
+}
+
+tr.male {
+	background-color: #9d9dff;
+}
+
+tr.female {
+	background-color: #ff8a8a;
 }
 
 .modal {
